--- a/views/voter/data-privacy.ejs
+++ b/views/voter/data-privacy.ejs
@@ -79,8 +79,7 @@
       }
     </script>
 
-    <% include('footer') %> 
-
+   
     <script src="js/index.js"></script>
 
     <script>
@@ -169,5 +168,7 @@
         }
       }, 1000);
     </script>
+     <%- include('footer') %> 
+
   </body>
 </html>
