--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -300,7 +300,7 @@
       </div>
     </div>
 
-    <% include('footer') %> 
+   
     
     <script src="js/index.js"></script>
 
@@ -391,5 +391,6 @@
       }, 1000);
     </script>
     <script src="js/dropdown.js"></script>
+    <%- include('footer') %> 
   </body>
 </html>
