--- a/views/voter/verify-otp.ejs
+++ b/views/voter/verify-otp.ejs
@@ -80,7 +80,7 @@
       </div>
     </div>
 
-    <% include('footer') %> 
+   <%- include('footer') %> 
     
     <script src="js/index.js"></script>
 
