--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -211,7 +211,7 @@
         <button id="exportBtn" style="border-radius: 6px; padding: 10px 20px; font-size: 16px" class="button-save">Export Receipt as Image</button>
       </div>
     </div>
-    <% include('footer') %> 
+    
     <script src="js/index.js"></script>
 
     <script>
@@ -356,5 +356,6 @@
 
     <script src="js/index.js"></script>
     <script src="js/dropdown.js"></script>
+    <%- include('footer') %> 
   </body>
 </html>
