--- a/views/voter/vote.ejs
+++ b/views/voter/vote.ejs
@@ -522,7 +522,7 @@
       <script src="js/dropdown.js"></script>
     </div>
 
-    <% include('footer') %> 
+    
 
     <!-- <script>
       const urlParams = new URLSearchParams(window.location.search);
@@ -531,5 +531,6 @@
       }
     </script> -->
     <script type="module" src="/components/notificationHandler.js"></script>
+    <%- include('footer') %> 
   </body>
 </html>
