--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer-left">
         <img src="img/calendar.png" class="footer-img" />
         <p id="datetime">OCTOBER 23, 2024 - 04:17 AM</p>
@@ -80,7 +80,7 @@
         <p>Admin? Log in&nbsp;</p>
         <a href="/admin-login"> here.</a>
       </div>
-    </footer>
+    </footer> -->
     <script src="js/index.js"></script>
 
     <script type="module">
@@ -107,5 +107,6 @@
         history.replaceState({}, document.title, window.location.pathname);
       }
     </script>
+     <%- include('../voter/footer') %>
   </body>
 </html>
