--- a/views/homepages/index-registration-period.ejs
+++ b/views/homepages/index-registration-period.ejs
@@ -126,7 +126,7 @@
         day: "numeric",
         hour: "2-digit",
         minute: "2-digit",
-        second: "2-digit",
+        // second: "2-digit",
         timeZone: "Asia/Manila",
       };
       datePeriodElem.textContent = new Date(registrationStart).toLocaleString("en-PH", options) + " - " + new Date(registrationEnd).toLocaleString("en-PH", options);
